RESOLVED FIXED97342
[BlackBerry] Media player won't resize for the following source when first source fail to load
https://bugs.webkit.org/show_bug.cgi?id=97342
Summary [BlackBerry] Media player won't resize for the following source when first so...
Jonathan Dong
Reported 2012-09-21 08:48:46 PDT
RIM PR: 211662 simplified test case: <html> <body> <video control> <source src="video-do-not-exist.mp4" /> <source src="video-valid.mp4" /> </video> </body> </html> the first source is an invalid url and the second is valid. This issue can also reproduce by test case media/video-size.html The root cause is if we failed to load the first source, we will accidentally set the video renderer's width and height attributes, which will prevent the second source's intrinsic size if it gets loaded successfully.
Attachments
Patch (2.11 KB, patch)
2012-09-21 08:52 PDT, Jonathan Dong
no flags
Patch (2.10 KB, patch)
2012-09-21 08:55 PDT, Jonathan Dong
no flags
Jonathan Dong
Comment 1 2012-09-21 08:52:32 PDT
Jonathan Dong
Comment 2 2012-09-21 08:55:23 PDT
WebKit Review Bot
Comment 3 2012-09-21 09:31:42 PDT
Comment on attachment 165141 [details] Patch Clearing flags on attachment: 165141 Committed r129235: <http://trac.webkit.org/changeset/129235>
WebKit Review Bot
Comment 4 2012-09-21 09:31:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.