[BlackBerry] Media player won't resize for the following source when first source fail to load https://bugs.webkit.org/show_bug.cgi?id=97342

Patch by Jonathan Dong <jonathan.dong@torchmobile.com.cn> on 2012-09-21
Reviewed by Yong Li.

As platformPlayer will notify MediaPlayerPrivate for size change
when loading metadata failed (in this case hasVideo() is false),
we should prevent MediaPlayerPrivate to set width and height
attribute of media element, otherwise we won't get the correct
dimension for the following media sources.

Internally reviewed by Max Feil.

Test case: media/video-size.html

* platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:
(WebCore::MediaPlayerPrivate::resizeSourceDimensions):

Canonical link: https://commits.webkit.org/115281@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129235 268f45cc-cd09-0410-ab3c-d52691b4dbfc